--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: sivakumarvunnam1@gmail.com
 description: Website of Sivakumar Vunnam, Staff DevOps Engineer at Blackhawk Network Inc
 keywords: sivakumar, vunnam, devops, Blackhawk Network, github
 baseurl: ""
-url: sivakumarvunnam.devops.github.io
+url: sivakumarvunnam.github.io
 name: Sivakumar Vunnam\'s blog
 author:
   name: Sivakumar Vunnam
