--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -7,4 +7,4 @@ email_logo: /assets/images/email.gif
 #rss_logo: /assets/images/rss.gif
 avatar: /assets/images/home.png
 apple-touch-icon: /assets/images/home.png
-favicon: /assets/images/favicon.png
+favicon: /assets/images/favicon1.png
