added kind project to repo

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -8,11 +8,19 @@
 - name: "Vagrant-Ubuntu-Bionic-Base"
   github:
     repo: "vagrant-ubuntu-bionic-base"
-  #url: "https://dhavalkapil.com/luaver/"
   source_url: "https://github.com/sivakumarvunnam/vagrant-ubuntu-bionic-base"
   description:
     - Vagrant Ubuntu 18.04 LTS base
     - Project to launch a vagrant machine with environment dependencies
+
+- name: "Kind(Kubernetes-IN-Docker)-Ubuntu18.04"
+  github:
+    repo: "Kind-Ubuntu18.04"
+  source_url: "https://github.com/sivakumarvunnam/Kind-Ubuntu18.04"
+  description:
+    - Vagrant Ubuntu 18.04 LTS base
+    - Project to Setup Kubernetes IN Docker - local clusters for testing Kubernetes
+    - Kind is a tool for running local Kubernetes clusters using Docker container "nodes". kind was primarily designed for testing Kubernetes itself, but may be used for local development or CI.
       
 - name: "Vagrant-Swarm-Cluster"
   github:
