--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -19,6 +19,13 @@
   description:
     - Demo Project to Setup Production Ready, Angular App using Docker, nginx with fully automated testcases using protractor
 
+- name: "Dockerizing-NodeApp-EFK"
+  github:
+    repo: "Dockerizing-NodeApp-EFK"
+  source_url: "https://github.com/sivakumarvunnam/Dockerizing-NodeApp-EFK"
+  description:
+    - Demo Project to Setup NodeJS App and configure centralized logging system using EFK.
+
 - name: "Vagrant-Ubuntu-Bionic-Base"
   github:
     repo: "vagrant-ubuntu-bionic-base"
