--- a/_data/params.yml
+++ b/_data/params.yml
@@ -6,6 +6,7 @@ linkedin_url: https://www.linkedin.com/in/sivakumarvunnam/
 about_url: /about/
 archive_url: /archive/
 projects_url: /projects/
+experience_url: /experience/
 ##contact_url: /contact/
 disclaimer_url: /disclaimer/
 resume_url: /resume.pdf
