--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -12,8 +12,8 @@
     repo: "BlackHawk Network"
   source_url: "https://blackhawknetwork.com/"
   description:
-    - Member of the Global DevOps organization at Blackhawk Network responsible for standardizing, provisioning, and supporting infrastructure for distributed applications.
-    - <b>Cloud Governance:</b> Standardize the creation of several AWS resources using AWS Service Catalog. This helps our centralized DevOps team define and set standards for resources created using template level constraints and automatic tagging of resources.
+    - Member of the Global DevOps organization at Blackhawk Network responsible for <b>standardizing, provisioning, and supporting infrastructure</b> for distributed applications.
+    - <b>Cloud Governance:</b> Standardize the creation of several AWS resources using <b>AWS Service Catalog</b>. This helps our centralized DevOps team define and set standards for resources created using template level constraints and automatic tagging of resources.
     - <b>Cost Optimization:</b> Lead a team to implement mixed instance types in EC2 Auto Scaling Groups across all our AWS accounts. This update has seen us <b>launch spot instances</b> wherever applicable and has reduced <b>EC2 costs by over 50% per month in our non-prod accounts</b>.
     - Migrated to Application Load Balancer is more cost effective than Classic Load Balancer. <b>For CLB's with high resource utilization, migrating to ALB saved 47% per month on our production accounts</b>.
     - Accomplished immutable infrastructure using CloudFormation and Terraform to deploy infrastructure in cloud/on-premises. Accomplished Setting up the build and deployment automation for Dev, Preproduction, Production environment using Terraform with Terragrunt as a wrapper
