--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -1,4 +1,4 @@
-- name: " Epsilon Data Management,Irving,TX"
+- name: "Epsilon Data Management, Irving, TX"
   github:
     repo: "Epsilon Data Management"
   source_url: "https://www.epsilon.com/us"
@@ -9,7 +9,7 @@
   tech: Terraform, Kubernetes, Docker, Helm, Spinnaker, Jenkins, SonarQube, Java, EFK, Grafana, Prometheus, Consul
   data: Mar'21-Jul'21
  
-- name: "BlackHawk Network,Lewisville,TX"
+- name: "BlackHawk Network, Lewisville, TX"
   github:
     repo: "BlackHawk Network"
   source_url: "https://blackhawknetwork.com/"
@@ -26,5 +26,19 @@
   tech: CloudFormation, APIGateway, Lambda, ECS, EKS, RDS, Docker, Helm, Jenkins, SonarQube, Jfrog, EFK, Grafana, Prometheus, Consul, Packer
   data: sep'18-Mar'21
 
+- name: "Senior DevOps Engineer, Saibersys Inc | Nexient Inc, Ann Arbor, MI"
+  github:
+    repo: "Nexient Inc"
+  source_url: "https://www.nexient.com/"
+  description:
+    - Develop Automation platform for delivering and managing Cloud and On-Prem infrastructure including, OpenStack, AWS and physical servers. Analyze current technology utilized within the company and develop steps and processes to improve and expand upon them using <b>Terraform</b>
+    - Support cloud and On-Prem servers including <b>security configurations, patching, and troubleshooting. Fluentd (td-agent) scrapes logfiles</b> for specific error messages and sends the message, hostname, and tag metrics to Prometheus. Prometheus rules are setup to capture these metrics and generate an email alert
+    - Implemented kubernetes cluster migration from on-prem <b>Kubespray cluster to EKS</b>.
+    - <b>Cloud Migration:</b> Worked on a time-critical migration project called Hawk Incentivesto successfully migrate all components (web, app servers and databases, Windows AD) of an acquisition made by Blackhawk Network from on-premises to AWS. This resulted in cost savings of over 40% on a monthly basis.
+    - Automated Java Spring, ruby on rails, Nodejs application build, deployments process using Jenkins, CloudFormation, Code Deploy. Configure d Apache gateways, New Relic and ELK for Monitoring and logging.
+    - <b>Cloud Security:</b> Collaborated with the InfoSec team to provision and configure several third-party tools such as Rapid7, Red lock (Prisma cloud) for maintaining governance and enforcing compliance across three of our production AWSaccounts.
+    - Reduced Docker images size by 40% which saved server resources like CPU and memory by using multistage Docker files and deployed them in ECS/EC2. Involved in migrating to microservices architecture from legacy monolith architectures
+  tech: Terraform, Kubernetes, Docker, Helm, Spinnaker, Jenkins, SonarQube, Java, EFK, Grafana, Prometheus, Consul
+  data: Oct'17-Aug'18
     
   
