--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -40,5 +40,17 @@
     - Reduced <b>Docker images size by 40% which saved server resources like CPU and memory by using multistage</b> Docker files and deployed them in ECS/EC2. Involved in migrating to microservices architecture from legacy monolith architectures
   tech: Terraform, Kubernetes, Docker, Helm, Spinnaker, Jenkins, SonarQube, Java, EFK, Grafana, Prometheus, Consul
   data: Oct'17-Aug'18
+
+- name: "Senior DevOps Engineer, Saibersys Inc | HGST a Western Digital, San Jose, CA "
+  github:
+    repo: "HGST a Western Digital"
+  source_url: "https://www.westerndigital.com/"
+  description:
+    - Automated Installation, configuring and administration the Linux VM’s on ESXI servers Using Vagrant and Implemented the automated factory installation on Active Scale X100 and Active Scale P100 hardware, Supporting TAAS (Test Drive as a Service) multiple geographical locations from Belgium, Las Vegas, and San Jose.
+    - Experience in writing the YAML files for Jenkins Job Builder for Dynamic Jenkins jobs configuration. Installation, configuration, and administration experience in revision management tool Gitlab, Jenkins, Maven, Nexus, Docker, Kubernetes.
+    - Written Dockerfiles to Isolate Java Spring, Python Django, Nodejs, Angular, applications images using docker.
+    - Used Docker Compose and Docker Swarm to deploy Dockerized images applications on ubuntu Linux 16.04 VM’s and Setting up alerting and monitoring of our infrastructure using Prometheus andGrafana
+  tech: Terraform, Kubernetes, Docker, Helm, Spinnaker, Jenkins, SonarQube, Java, EFK, Grafana, Prometheus, Consul
+  data: Jul’16-Aug’17
     
   
