HGST a Western Digital

--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -41,7 +41,7 @@
   tech: Terraform, Kubernetes, Docker, Helm, Spinnaker, Jenkins, SonarQube, Java, EFK, Grafana, Prometheus, Consul
   data: Oct'17-Aug'18
 
-- name: "Senior DevOps Engineer, Saibersys Inc | HGST a Western Digital, San Jose, CA "
+- name: "Senior DevOps Engineer, Saibersys Inc | HGST Inc, San Jose, CA "
   github:
     repo: "HGST a Western Digital"
   source_url: "https://www.westerndigital.com/"
