--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,9 +6,9 @@
     - Terraform module to deploy helm chart's 
   tech: Terrafrom, Helm
   
-- name: "terraform-aws-aks"
+- name: "terraform-aws-eks
   github:
-    repo: "terraform-aws-aks"
+    repo: "terraform-aws-eks"
   source_url: "https://github.com/sivakumarvunnam/terraform-aws-eks"
   description:
     - Terraform module to create EKS cluster with ALB Ingress, ExternalDNS, Cluster-Autoscaler using Terraform Cloud 
